<resources>
    <string-array name="help_screens">
        <item>help_screen1</item>
        <item>help_screen2</item>
    </string-array>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    <string name="no_internet_try_again">No internet connection.Please check your connection and try again.</string>
    <string name="resource_not_supported">This resource is not supported.</string>
    <string name="bookshelf_category_default_category">Show All Items</string>
    <string name="bookshelf_category_default_category_books">All Items</string>
    <string name="bookshelf_category_download">Show Downloaded</string>
    <string name="bookshelf_category_download_books">Downloaded</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_accessCode">55555</string>
    <string name="need_permission">Need to give permission</string>
    <string name="forgot_email_send_success_msg">Instructions to reset your password has been sent to your eMail.</string>
    <string name="forgot_email_send_fail_msg">Entered mail id not register please try again with different mail id</string>
    <string name="alert_empty_accesscode">Please enter Access Code</string>
    <string name="alert_empty_emailid">Please enter Email id</string>
    <string name="alert_invalid_accesscode">Please enter valid Access Code</string>
    <string name="network_error">Internet connection unavailable.</string>
    <string name="network_error_new">Internet connection unavailable.</string>
    <string name="alert_bookshelf_empty">Shelf name can not be empty</string>
    <string name="alert_bookshelf_already_exist">Shelf already exists. Please edit shelf name.</string>
    <string name="alert_book_delete">Do you wish to delete this book?</string>
    <string name="alert_video_delete">Do you wish to delete this video?</string>
    <string name="alert_audio_delete">Do you wish to delete this audio?</string>
    <string name="alert_delete_book_title">Delete this Book?</string>
    <string name="alert_delete_book_msg">This action is irreversible</string>
    <string name="alert_shelf_delete">Do you wish to delete book Shelf?</string>
    <string name="pentool_delete_alert_msg">This action will permanently clear the selected drawings. Do you wish to continue?</string>
    <string name="pentool_delete_alert_title">Clear all pen marks</string>
    <string name="shelf_delete_alert_title">Delete Shelf</string>
    <string name="delete_note_title">Delete</string>
    <string name="delete_protractor">Are you sure you want to delete?</string>
    <string name="delete_note_message">Do you wish to delete this Note?</string>
    <string name="alert_title">Alert</string>
    <string name="alert_title_teacher_review_popup">Alert!</string>
    <string name="alert_msg_teacher_review_popup">Unable to save data, please try again.</string>
    <string name="logout_title">Log out</string>
    <string name="sync_title">Submit Data</string>
    <string name="sync_clear_title">Clear Data</string>
    <string name="clearAll_title">Clear All</string>
    <string name="sync_message">Answers will be submitted and cannot be changed.\nDo you wish to continue?</string>
    <string name="individual_sync_message">Answers will be submitted. Do you wish to continue?</string>
    <string name="sync_clear_message">Answers will be cleared. Do you wish to continue?</string>
    <string name="sync_message_nodata">No data to submit.</string>
    <string name="check_message_nodata">No data to clear.</string>
    <string name="sync_message_fib_data_clear">Selected Fib has been cleared.</string>
    <string name="al_book_delete_title">Delete Book</string>
    <string name="al_video_delete_title">Delete Video</string>
    <string name="msg_accesscode_and_downloading">Access code is not allowed while a book is downloading.</string>
    <string name="page_not_found">Please enter a valid page number.</string>
    <string name="page_not_exist">Page not Exist.</string>
    <string name="alert_no_shared_notes">No shared notes found.</string>
    <string name="alert_no_notes">No notes found.</string>
    <string name="alert_no_shared_highlight">No shared highlights found.</string>
    <string name="al_no_highlight">No highlights found.</string>
    <string name="alert_no_shared_all_data">No shared data found.</string>
    <string name="alert_no_data">No data found</string>
    <string name="alert_exit_title">Exit</string>
    <string name="alert_password_validation">Password must be between 8 and 15 characters.</string>
    <string name="alert_password_minimum_limit">Your password must be at least 8 characters long. Please try another.</string>
    <string name="alert_password_maximum_limit">Your password must smaller than 20 characters. Please try another.</string>
    <string name="ugc_setting_select_message">Please select atleast one</string>
    <string name="validation_empty_data">No Data found, Please try again.</string>
    <string name="server_sucess_msg">No Data found, Please try again.</string>
    <string name="server_fail_msg">No Data found, Please try again.</string>
    <string name="server_empty_field_msg">Please enter all the fields.</string>
    <string name="server_invalid_field_msg">Please enter valid data for all the fields.</string>
    <string name="server_invalid_type_msg">Please enter valid data for all the fields.</string>
    <string name="server_token_expired_msg">The session is not valid.</string>
    <string name="server_multiple_client_msg">Multiple client. Please try again!</string>
    <string name="server_multiple_institutes_msg">Multiple institutes, Please try again.</string>
    <string name="server_duplicate_emailid_msg">Entered eMail ID already exists.</string>
    <string name="not_purchased">you are not authorized to access this book,it is not assigned or purchased by you.</string>
    <string name="error_on_file_access_content">Sorry epub kindly contact</string>
    <string name="server_accesscode_invalid_msg">Access code entered is Invalid !</string>
    <string name="server_accesscode_invalid_with_other_user_msg">Access code entered is redeemed by a different user !</string>
    <string name="server_accesscode_invalid_with_same_user_msg">Access code entered is already redeemed !</string>
    <string name="server_accesscode_invalid_with_other_institute">You are not allowed to redeem Access code for this Institute.</string>
    <string name="server_accesscode_invalid_distribustion_fail_msg">Error in redeeming Access code. Please try again later.</string>
    <string name="server_client_invalid_msg">No Data found, Please try again.</string>
    <string name="server_book_licence_limit_reached">You have exceeded the limit to download the book on multiple devices.</string>
    <string name="server_video_licence_limit_reached">You have exceeded the limit to download the video on multiple devices.</string>
    <string name="server_book_licence_expired">The book cannot be downloaded as the license of the book has expired.</string>
    <string name="server_book_not_available">The book not available.</string>
    <string name="server_client_trial_redirect">Client trial redirect.</string>
    <string name="server_account_inactive">Account inactive.</string>
    <string name="server_time_out_erros">Server not reacheble right now please try again later</string>
    <string name="server_unknown_error">Low network connectivity, Please try again</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="alert_invalid_emailid">Please enter a valid Email ID</string>
    <string name="alert_empty_mail_id">Email ID is required</string>
    <string name="alert_empty_password">Password is required</string>
    <string name="alert_empty_first_name">First Name is required</string>
    <string name="alert_empty_user_name">Full Name is required</string>
    <string name="alert_invalid_input">Invalid input</string>
    <string name="alert_full_name_character_limit">Full Name must be between 1 and %1$s characters</string>
    <string name="alert_user_name_character_limit">User Name must be between 1 and %1$s characters</string>
    <string name="alert_empty_confirm_password">Confirm your password</string>
    <string name="alert_empty_last_name">Last Name is required</string>
    <string name="alert_last_name_character_limit">Last Name must be between 1 and %1$s characters</string>
    <string name="alert_emailid_character_limit">Email ID must be between 1 and %1$s characters</string>
    <string name="alert_password_character_limit">Password must be between %1$s and %2$s characters</string>
    <string name="alert_wrong_password">Passwords entered do not match</string>
    <string name="alert_wrong_email_id">Email ID belongs to an existing account</string>
    <string name="confirm_password_not_match">Passwords do not match.</string>
    <string name="password_not_match">Old Password and New Password Cannot be Same.</string>
    <string name="password_and_newpassword_match">Please enter different password</string>
    <string name="confirmpassword_and_newpassword_mismatch">New password and Confirm new password does not match</string>
    <string name="alert_all_field_required">Required field cannot be left blank</string>
    <string name="toast_rest_password_success">Your password has been changed successfully</string>
    <string name="toast_rest_password_in_progress">Please wait</string>
    <string name="alert_rest_password_success">Your password has been reset. Please check your eMail for new password..</string>
    <string name="alert_rest_password_title">Reset Password</string>
    <string name="download_browser_dialog_message">You will be redirected to install Firefox browser. Do you want to continue?</string>
    <string name="download_browser_dialog_title">Download Firefox?</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="alert_highlight_delete_title">Delete</string>
    <string name="alert_highlight_delete_message">Do you wish to delete this highlight?</string>
    <string name="toast_message">Toast message</string>
    <string name="alert_signout_message">Do you wish to Sign Out?</string>
    <string name="alert_signout_title">Sign Out</string>
    <string name="alert_signout_message_internet_unavailable">Internet Connection Unavailable unable to sync data Do you still want to Sign Out?</string>
    <string name="alert_signout_message_data_syncing">Data Syncing in Progress Do you still want to Sign Out?</string>
    <string name="alert_signout_title_while_data_sync_going">Sign Out</string>
    <string name="alert_error_save_settings">Error in saving settings</string>
    <string name="alert_successfully_submit_data">Your data has been successfully saved.</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="resource_search_hint">Search with Keywords</string>
    <string name="advanced_search_title">Narrow your search :</string>
    <string name="author">Author</string>
    <string name="book_title">Book Title</string>
    <string name="series_title_search">Series Title</string>
    <string name="category">Category</string>
    <string name="eisbn">eISBN</string>
    <string name="subject_search">Subject</string>
    <string name="publisher">Publisher</string>
    <string name="book_content">Book Content</string>
    <string name="interest_level_search">Interest Level:</string>
    <string name="reset_filter">reset filter</string>
    <string name="apply">apply</string>
</resources>